fix:overflow issue fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -466,6 +466,7 @@ p.card-text.card-testimonial {
     position: relative;
     top: 47rem;
     height: 100vh;
+    overflow: hidden;
 }
 .faq-heading {
     font-family: 'Montserrat-800';
@@ -511,4 +512,22 @@ p.card-text.card-testimonial {
     position: relative;
     left: 28rem;
     bottom: 10rem;
+}
+.about-bg {
+    background-image: url(../assets/about-bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    top: 47rem;
+    height: 100vh;
+}
+.about-title {
+    font-family: 'Montserrat-800';
+    font-size:34px;
+    color:yellow;
+    text-align: center;
+    padding-top: 80px;
+    padding-bottom: 50px;
 }
